# easydict_nicegui

./: .gitignore  README.md  pyproject.toml
easydict_gui/: easydict_gui.py
easydict_gui/backends/: sqlite_backend.py
easydict_nicegui/: easydict_gui.py  helpers.py  settings.py
easydict_nicegui/backends/: backend.py  sqlite_backend.py
tests/: test_sqlite_backend.py
