[tool.poetry]
name = "easydict-gui"
version = "0.1.0"
description = "Small translator in NiceGUI"
authors = ["jiri.one <nemec@jiri.one>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "easydict_gui"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pythonnet = ">=3.0.1"
nicegui = "^1.2.20"
aiosqlite = "^0.19.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
